[package]
name = "tokio-wrap"
version = "0.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/themackabu/tokio-wrap"
description = "run asynchronous code within synchronous functions"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
syn = { version = "2.0.77", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.99"
tokio = { version = "1.40.0", features = ["full", "test-util"] }